--- a/GitGud/Base.lproj/Main.storyboard
+++ b/GitGud/Base.lproj/Main.storyboard
@@ -27,12 +27,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Branch" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLE-eO-gBh">
-                                <rect key="frame" x="20" y="261" width="55" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kgL-ao-5W0">
                                 <rect key="frame" x="119" y="158" width="275" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -46,140 +40,53 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uRo-pF-RPc">
-                                <rect key="frame" x="119" y="254" width="275" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GitGud" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mje-V0-jrL">
                                 <rect key="frame" x="20" y="99" width="374" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IWg-uK-r9L">
-                                <rect key="frame" x="20" y="310" width="374" height="36"/>
-                                <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                                <state key="normal" title="Test"/>
-                                <connections>
-                                    <action selector="testRepo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3RB-5A-agj"/>
-                                    <segue destination="WIw-5J-h1N" kind="show" id="pUy-bP-apa"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RXT-Si-jQe">
-                                <rect key="frame" x="20" y="388" width="374" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bEp-Xc-ty4">
+                                <rect key="frame" x="20" y="260" width="374" height="30"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Test2"/>
+                                <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="test2User:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5ew-1U-XoN"/>
+                                    <action selector="repoDataFunc:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zHd-Zy-cwW"/>
+                                    <segue destination="WIw-5J-h1N" kind="show" id="vfX-Rw-JHt"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="2" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SYe-ta-LY3" customClass="RepoPicker" customModule="GitGud" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="444" width="414" height="418"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="87" id="bSW-Ek-H2j" customClass="RepoPickerViewCell">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="87"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bSW-Ek-H2j" id="9f9-M9-4JF">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="87"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="GitGud" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d0V-6O-UPp">
-                                                    <rect key="frame" x="20" y="11" width="164" height="27"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <accessibility key="accessibilityConfiguration" identifier="repoCell"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="12/12/2019" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G7U-1i-ecb">
-                                                    <rect key="frame" x="20" y="58" width="65" height="18"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="12/12/2019" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N8E-9b-szJ">
-                                                    <rect key="frame" x="119" y="58" width="65" height="18"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XsU-Mk-M4Q">
-                                                    <rect key="frame" x="20" y="41" width="65" height="13"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Updated" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEN-15-vEp">
-                                                    <rect key="frame" x="119" y="41" width="65" height="13"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5or-Yx-9F1">
-                                                    <rect key="frame" x="202" y="11" width="192" height="64"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                                    <state key="normal" title="Button"/>
-                                                </button>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="createdDate" destination="G7U-1i-ecb" id="ixI-cB-J5y"/>
-                                            <outlet property="repoButton" destination="5or-Yx-9F1" id="tGu-bm-sUX"/>
-                                            <outlet property="updatedDate" destination="N8E-9b-szJ" id="xHh-IQ-MgJ"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="uRo-pF-RPc" firstAttribute="leading" secondItem="hLE-eO-gBh" secondAttribute="trailing" constant="44" id="0fc-xP-0qv"/>
                             <constraint firstItem="Pub-Zq-ieb" firstAttribute="top" secondItem="kgL-ao-5W0" secondAttribute="bottom" constant="14" id="28x-f5-xDO"/>
+                            <constraint firstItem="bEp-Xc-ty4" firstAttribute="top" secondItem="Pub-Zq-ieb" secondAttribute="bottom" constant="20" id="3ap-Nl-0YV"/>
                             <constraint firstItem="Pub-Zq-ieb" firstAttribute="leading" secondItem="Nkx-Iq-7Ac" secondAttribute="trailing" constant="59" id="99u-7n-XC1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kgL-ao-5W0" secondAttribute="trailing" constant="20" id="FKh-Gk-axR"/>
                             <constraint firstItem="Nkx-Iq-7Ac" firstAttribute="top" secondItem="gs0-28-l9c" secondAttribute="bottom" constant="27" id="HVT-M6-IQn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Pub-Zq-ieb" secondAttribute="trailing" constant="20" id="MqX-7B-Xk6"/>
-                            <constraint firstItem="hLE-eO-gBh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Pq1-1R-fc6"/>
                             <constraint firstItem="mje-V0-jrL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="11" id="Ptz-eG-nFy"/>
                             <constraint firstItem="gs0-28-l9c" firstAttribute="top" secondItem="mje-V0-jrL" secondAttribute="bottom" constant="25" id="QMZ-q0-Imk"/>
+                            <constraint firstItem="bEp-Xc-ty4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="T3q-gP-J6c"/>
                             <constraint firstItem="kgL-ao-5W0" firstAttribute="leading" secondItem="gs0-28-l9c" secondAttribute="trailing" constant="20" id="VDU-f6-HKf"/>
                             <constraint firstItem="Nkx-Iq-7Ac" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="WYa-wF-RM2"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uRo-pF-RPc" secondAttribute="trailing" constant="20" id="YCD-zC-3oR"/>
                             <constraint firstItem="gs0-28-l9c" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Ymf-xy-q6g"/>
-                            <constraint firstItem="IWg-uK-r9L" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="el0-ag-eMp"/>
-                            <constraint firstItem="hLE-eO-gBh" firstAttribute="top" secondItem="Nkx-Iq-7Ac" secondAttribute="bottom" constant="27" id="jGe-IE-bi1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bEp-Xc-ty4" secondAttribute="trailing" constant="20" id="kJR-yc-Tgf"/>
                             <constraint firstItem="mje-V0-jrL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="mqN-9t-9W2"/>
-                            <constraint firstItem="uRo-pF-RPc" firstAttribute="top" secondItem="Pub-Zq-ieb" secondAttribute="bottom" constant="14" id="odf-8o-evQ"/>
                             <constraint firstItem="kgL-ao-5W0" firstAttribute="top" secondItem="mje-V0-jrL" secondAttribute="bottom" constant="18" id="tyT-9a-etq"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IWg-uK-r9L" secondAttribute="trailing" constant="20" id="v0l-se-ldv"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mje-V0-jrL" secondAttribute="trailing" constant="20" id="wvl-gd-pou"/>
-                            <constraint firstItem="IWg-uK-r9L" firstAttribute="top" secondItem="uRo-pF-RPc" secondAttribute="bottom" constant="22" id="x0O-Ky-7rL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="4pW-WV-pXZ"/>
                     <connections>
-                        <outlet property="branchEntry" destination="uRo-pF-RPc" id="isy-li-GbL"/>
+                        <outlet property="getData" destination="bEp-Xc-ty4" id="Fjp-PX-uku"/>
                         <outlet property="repoEntry" destination="Pub-Zq-ieb" id="XeE-0G-P8Z"/>
-                        <outlet property="repoTableView" destination="SYe-ta-LY3" id="hiT-1K-EjI"/>
-                        <outlet property="test2Button" destination="RXT-Si-jQe" id="lNb-Oy-wkL"/>
-                        <outlet property="testButton" destination="IWg-uK-r9L" id="VuY-oU-d8y"/>
                         <outlet property="usernameEntry" destination="kgL-ao-5W0" id="AZR-Fc-gax"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1886.9565217391305" y="118.52678571428571"/>
+            <point key="canvasLocation" x="1825" y="119"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="S0X-nS-bWE">
